# HexaMC

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  flake.nix
.github/workflows/: build.yml  trigger_release.yml  winget.yml
launcher/: Application.cpp  main.cpp
launcher/minecraft/: Library.h
launcher/minecraft/launch/: LauncherPartLaunch.cpp
launcher/resources/multimc/: multimc.qrc
libraries/launcher/: CMakeLists.txt
libraries/launcher/org/hexamc/: EntryPoint.java  Launcher.java  LauncherFactory.java
libraries/launcher/org/hexamc/applet/: LegacyFrame.java
libraries/launcher/org/hexamc/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/org/hexamc/impl/: OneSixLauncher.java
libraries/launcher/org/hexamc/utils/: Parameters.java  Utils.java
nix/: NIX.md  default.nix
program_info/: CMakeLists.txt  README.md  genicons.sh  hexamc.6.scd  hexamc.manifest.in  hexamc.qrc  hexamc.rc.in  org.hexamc.HexaMC.desktop.in  org.hexamc.HexaMC.metainfo.xml.in
